# lordinal_text_extension_indexer

./: .env  Cargo.toml  deltaindex.sh
src/: database.rs  main.rs
