[package]
name = "lordinalindex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

csv = "1.1.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.2"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"


